--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -184,6 +184,7 @@
     <Compile Include="ViewModels\- Test Infrastructure -\BehaviorContextStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\DescriptorStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\PropertyStub.cs" />
+    <Compile Include="ViewModels\- Test Infrastructure -\ServiceLocatorStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\ValidationResultAggregaturStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\ValidationResultProviderStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\ValueAccessorStub.cs" />
@@ -210,7 +211,7 @@
     <Compile Include="ViewModels\Core\Paths\PathFixture.cs" />
     <Compile Include="ViewModels\Core\Paths\PathHelperTests.cs" />
     <Compile Include="ViewModels\Core\Paths\PropertyStepTests.cs" />
-    <Compile Include="ViewModels\Core\Properties\ViewModelInitializerBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\ViewModelProperty\ViewModelInitializerBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\TypeDescriptorServiceTests.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\VMPropertyDescriptorTests.cs" />
     <Compile Include="ViewModels\Core\Validation\Behaviors\CollectionValidationSourceBehaviorTests.cs" />
@@ -272,7 +273,7 @@
     <Compile Include="ViewModels\CommandPropertyTest.cs" />
     <Compile Include="ViewModels\Behaviors\VMPropertyTest.cs" />
     <Compile Include="ViewModels\Core\Builder\VMPropertyFactoryTest.cs" />
-    <Compile Include="ViewModels\Core\Properties\ViewModelFactoryBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\ServiceLocatorValueFactoryBehaviorTests.cs" />
     <Compile Include="ViewModels\PersonVM.cs" />
     <Compile Include="ViewModels\TypeDescriptorTest.cs" />
     <Compile Include="ViewModels\ViewModelsTest.cs" />
@@ -306,6 +307,7 @@
     <Folder Include="ApiTests\ViewModels\BasicTests\" />
     <Folder Include="API\" />
     <Folder Include="Shell\" />
+    <Folder Include="ViewModels\Core\Properties\Common\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\PersonView.xaml">
