--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -191,8 +191,8 @@
     <Compile Include="ViewModels\- Test Infrastructure -\ViewModelStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\VMCollectionStub.cs" />
     <Compile Include="Common\BehaviorKeysTests.cs" />
-    <Compile Include="ViewModels\Core\Behaviors\PropertyBehaviors\DisplayValueBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\Builder\VMPropertyBuilderTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\Common\DisplayValueBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMPropertyBuilderTests.cs" />
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\Behaviors\CollectionAccessorBehaviorFixture.cs" />
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\Behaviors\PopulatedCollectionAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\Behaviors\StoredCollectionAccessorBehaviorTests.cs" />
@@ -202,18 +202,18 @@
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\Behaviors\CollectionSynchronizerBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\Behaviors\ItemInitializerBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\VMCollectionTestBase.cs" />
-    <Compile Include="ViewModels\Core\Commands\CommandAccessorBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\Commands\DelegateCommandExecutorBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\Commands\ViewModelCommandTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\CommandProperty\CommandAccessorBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\CommandProperty\DelegateCommandExecutorBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\CommandProperty\ViewModelCommandTests.cs" />
     <Compile Include="ViewModels\Core\Common\ChangeArgsTests.cs" />
-    <Compile Include="ViewModels\Core\CountingSetTests.cs" />
-    <Compile Include="ViewModels\Core\Paths\PathDefinitionTests.cs" />
-    <Compile Include="ViewModels\Core\Paths\PathFixture.cs" />
-    <Compile Include="ViewModels\Core\Paths\PathHelperTests.cs" />
-    <Compile Include="ViewModels\Core\Paths\PropertyStepTests.cs" />
+    <Compile Include="ViewModels\Core\Common\CountingSetTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\PathDefinitionTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\PathFixture.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\PathHelperTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\PropertyStepTests.cs" />
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\ViewModelInitializerBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\TypeDescriptor\TypeDescriptorServiceTests.cs" />
-    <Compile Include="ViewModels\Core\TypeDescriptor\VMPropertyDescriptorTests.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\TypeDescriptorProviderBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\TypeDescriptor\ViewModelPropertyDescriptorTests.cs" />
     <Compile Include="ViewModels\Core\Validation\Behaviors\CollectionValidationSourceBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Validation\Behaviors\DescendantsValidatorBehavior\CollectionPropertyDescendantsValidatorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Validation\Behaviors\ValidationResultAggregatorBehaviorTests.cs" />
@@ -239,11 +239,11 @@
     <Compile Include="ViewModels\Core\Validation\Validators\ValidationArgsFixture.cs" />
     <Compile Include="ViewModels\Core\Validation\Validators\ViewModelValidationArgsTests.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelValidationSourceBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBaseTests.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorBuilderTests.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\VMDescriptorBuilderTests.cs" />
-    <Compile Include="ViewModels\Core\VMKernelTests.cs" />
-    <Compile Include="ViewModels\Core\VMPropertyFactoryTests.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\Descriptor\VMDescriptorBaseTests.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\ValidatorBuilderTests.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMDescriptorBuilderTests.cs" />
+    <Compile Include="ViewModels\Core\ViewModel\VMKernelTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\VMPropertyFactoryTests.cs" />
     <Compile Include="ViewModels\IntegrationTests\ChangeNotificationTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\CollectionPropertyTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\CollectionValidationTest.cs" />
@@ -272,14 +272,12 @@
     <Compile Include="ViewModels\Behaviors\DisplayValueAccessorBehaviorTest.cs" />
     <Compile Include="ViewModels\CommandPropertyTest.cs" />
     <Compile Include="ViewModels\Behaviors\VMPropertyTest.cs" />
-    <Compile Include="ViewModels\Core\Builder\VMPropertyFactoryTest.cs" />
-    <Compile Include="ViewModels\Core\Properties\ServiceLocatorValueFactoryBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\Common\ServiceLocatorValueFactoryBehaviorTests.cs" />
     <Compile Include="ViewModels\PersonVM.cs" />
     <Compile Include="ViewModels\TypeDescriptorTest.cs" />
     <Compile Include="ViewModels\ViewModelsTest.cs" />
     <Compile Include="ViewModels\ViewModel_ParentChild.cs" />
     <Compile Include="ViewModels\VMCollectionPropertyTest.cs" />
-    <Compile Include="ViewModels\Core\Builder\VMDescriptorBuilderTest.cs" />
     <Compile Include="ViewModels\VMCollectionTest.cs" />
     <Compile Include="ViewModels\VMCollectionWithCustomValidationTests.cs" />
     <Compile Include="ViewModels\VMDescriptorTests.cs" />
@@ -307,7 +305,9 @@
     <Folder Include="ApiTests\ViewModels\BasicTests\" />
     <Folder Include="API\" />
     <Folder Include="Shell\" />
-    <Folder Include="ViewModels\Core\Properties\Common\" />
+    <Folder Include="ViewModels\Core\Behaviors\PropertyBehaviors\" />
+    <Folder Include="ViewModels\Core\Builder\" />
+    <Folder Include="ViewModels\Core\Commands\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\PersonView.xaml">
