--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -191,6 +191,7 @@
     <Compile Include="ViewModels\- Test Infrastructure -\ViewModelStub.cs" />
     <Compile Include="ViewModels\- Test Infrastructure -\VMCollectionStub.cs" />
     <Compile Include="Common\BehaviorKeysTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\Common\CachedAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\DisplayValueBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMPropertyBuilderTests.cs" />
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\Behaviors\CollectionAccessorBehaviorFixture.cs" />
@@ -244,14 +245,9 @@
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMDescriptorBuilderTests.cs" />
     <Compile Include="ViewModels\Core\ViewModel\VMKernelTests.cs" />
     <Compile Include="ViewModels\Core\Properties\VMPropertyFactoryTests.cs" />
-    <Compile Include="ViewModels\IntegrationTests\ChangeNotificationTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\CollectionPropertyTest.cs" />
-    <Compile Include="ViewModels\IntegrationTests\CollectionValidationTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\StandardValidationsTest.cs" />
-    <Compile Include="ViewModels\IntegrationTests\ValidationTest2.cs" />
-    <Compile Include="ViewModels\IntegrationTests\ValidationTest.cs" />
     <Compile Include="ViewModels\PropertyTypeHelperTests.cs" />
-    <Compile Include="ViewModels\TempTests\CollectionPropertyTest.cs" />
     <Compile Include="ViewModels\TestBase.cs" />
     <Compile Include="ViewModels\TestVM.cs" />
     <Compile Include="Common\BehaviorsTest.cs" />
@@ -267,18 +263,13 @@
     <Compile Include="Screens\ScreenFactoryTest.cs" />
     <Compile Include="Screens\ScreenTest.cs" />
     <Compile Include="UnitTest1.cs" />
-    <Compile Include="ViewModels\Behaviors\BehaviorsTest.cs" />
-    <Compile Include="ViewModels\Behaviors\CollectionPopulatorTest.cs" />
-    <Compile Include="ViewModels\Behaviors\DisplayValueAccessorBehaviorTest.cs" />
+    <Compile Include="ViewModels\Core\Properties\Common\DisplayValueAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\CommandPropertyTest.cs" />
-    <Compile Include="ViewModels\Behaviors\VMPropertyTest.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\ServiceLocatorValueFactoryBehaviorTests.cs" />
     <Compile Include="ViewModels\PersonVM.cs" />
     <Compile Include="ViewModels\TypeDescriptorTest.cs" />
     <Compile Include="ViewModels\ViewModelsTest.cs" />
     <Compile Include="ViewModels\ViewModel_ParentChild.cs" />
-    <Compile Include="ViewModels\VMCollectionPropertyTest.cs" />
-    <Compile Include="ViewModels\VMCollectionTest.cs" />
     <Compile Include="ViewModels\VMCollectionWithCustomValidationTests.cs" />
     <Compile Include="ViewModels\VMDescriptorTests.cs" />
     <Compile Include="Views\CustomPropertyDescriptorTest.cs" />
@@ -305,9 +296,8 @@
     <Folder Include="ApiTests\ViewModels\BasicTests\" />
     <Folder Include="API\" />
     <Folder Include="Shell\" />
+    <Folder Include="ViewModels\Behaviors\" />
     <Folder Include="ViewModels\Core\Behaviors\PropertyBehaviors\" />
-    <Folder Include="ViewModels\Core\Builder\" />
-    <Folder Include="ViewModels\Core\Commands\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\PersonView.xaml">
