--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -194,6 +194,7 @@
     <Compile Include="ViewModels\- Test Infrastructure -\VMCollectionStub.cs" />
     <Compile Include="Common\BehaviorKeysTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\CollectionPropertyStepTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\CollectionStepTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\CachedAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\DisplayValueBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMPropertyBuilderTests.cs" />
