Added fluent validator mock configuration.

--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -108,6 +108,8 @@
   <ItemGroup>
     <Compile Include="- Test Infrastructure -\NullValidator.cs" />
     <Compile Include="- Test Infrastructure -\TestViewModel.cs" />
+    <Compile Include="- Test Infrastructure -\ValidatorMockConfiguration.cs" />
+    <Compile Include="- Test Infrastructure -\ValidatorMockConfigurationFluent.cs" />
     <Compile Include="- Test Infrastructure -\ValidatorSetup.cs" />
     <Compile Include="ApiTests\ViewModels\CommandHandlerTests.cs" />
     <Compile Include="ApiTests\ViewModels\Core\PathDefintionTests.cs" />
