--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -157,6 +157,9 @@
     <Compile Include="ViewModels\Core\Properties\Common\BehaviorInterfaces\IUntypedValueGetterBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\BehaviorInterfaces\IUntypedValueSetterBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\BehaviorInterfaces\ViewModelBehaviors\IViewModelRevalidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\Validation\CollectionResult.cs" />
+    <Compile Include="ViewModels\Core\Validation\CollectionResultTarget.cs" />
+    <Compile Include="ViewModels\Core\Validation\CollectionValidationController.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationController.cs" />
     <Compile Include="ViewModels\Core\ViewModel\BehaviorInterfaces\IChangeHandlerBehavior.cs" />
     <Compile Include="ViewModels\Core\ViewModel\BehaviorInterfaces\IRefreshControllerBehavior.cs" />
