--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Common\BehaviorKeysTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\CollectionPropertyStepTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\CollectionStepTests.cs" />
+    <Compile Include="ViewModels\Core\FluentDescriptorBuilder\DependencyBuilderTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\CachedAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\DisplayValueBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\VMPropertyBuilderTests.cs" />
