--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -112,7 +112,7 @@
     <Compile Include="- Test Infrastructure -\ValidatorMockConfigurationFluent.cs" />
     <Compile Include="- Test Infrastructure -\ValidatorSetup.cs" />
     <Compile Include="ApiTests\ViewModels\CommandHandlerTests.cs" />
-    <Compile Include="ApiTests\ViewModels\Core\PathDefintionTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Core\PathDefinitionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Domain\CustomerRepository.cs" />
     <Compile Include="ApiTests\ViewModels\InheritanceTests.cs" />
     <Compile Include="ApiTests\ViewModels\InheritanceWithGenericsTests.cs" />
