Fixed view model property validation.

--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -161,6 +161,7 @@
     <Compile Include="ViewModels\Core\Properties\Common\BehaviorInterfaces\IUntypedValueGetterBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\BehaviorInterfaces\IUntypedValueSetterBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\BehaviorInterfaces\ViewModelBehaviors\IViewModelRevalidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\Validation\Behaviors\PropertyBehaviors\ViewModelPropertyValueValidationSourceBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionResult.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionResultTarget.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionValidationController.cs" />
