--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -154,6 +154,7 @@
     <Compile Include="ViewModels\Core\Properties\CollectionProperty\BehaviorInterfaces\ICollectionChangeHandlerBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\CommandProperty\BehaviorInterfaces\ICommandCanExecuteBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\CommandProperty\BehaviorInterfaces\ICommandExecuteBehavior.cs" />
+    <Compile Include="ViewModels\Core\Properties\ViewModelProperty\Behaviors\StoredViewModelAccessorBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\BehaviorInterfaces\PropertyBehaviors\IDescendantsValidationResultProviderBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\BehaviorInterfaces\IValueFactoryBehavior.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\BehaviorInterfaces\IValueInitializerBehavior.cs" />
