--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -128,7 +128,6 @@
     <Compile Include="ApiTests\ViewModels\Domain\TaskRepository.cs" />
     <Compile Include="ApiTests\ViewModels\PerformanceTests.cs" />
     <Compile Include="ApiTests\ViewModels\PropertyDependencyTests.cs" />
-    <Compile Include="ApiTests\ViewModels\RefreshTests.cs" />
     <Compile Include="ApiTests\ViewModels\Refresh\CollectionPropertyRefreshTests.cs" />
     <Compile Include="ApiTests\ViewModels\Refresh\RefreshFixture.cs" />
     <Compile Include="ApiTests\ViewModels\Refresh\SimplePropertyRefreshTests.cs" />
@@ -227,6 +226,8 @@
     <Compile Include="ViewModels\Core\Common\Paths\PathFixture.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\PathHelperTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\PropertyStepTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\SimpleProperty\SimplePropertyRefreshBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Properties\ViewModelProperty\DelegateViewModelAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\StoredViewModelAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\ViewModelInitializerBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\ViewModelProperty\ViewModelPropertyAccessorFixture.cs" />
