--- a/Dev/Source/MvvmTest/MvvmTest.csproj
+++ b/Dev/Source/MvvmTest/MvvmTest.csproj
@@ -204,6 +204,9 @@
     <Compile Include="Common\BehaviorKeysTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\CollectionPropertyStepTests.cs" />
     <Compile Include="ViewModels\Core\Common\Paths\CollectionStepTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\AnyPropertyStepTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\OptionalStepTests.cs" />
+    <Compile Include="ViewModels\Core\Common\Paths\StepFixture.cs" />
     <Compile Include="ViewModels\Core\FluentDescriptorBuilder\DependencyBuilderTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\CachedAccessorBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Properties\Common\DisplayValueBehaviorTests.cs" />
